--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
 			<artifactId>poi</artifactId>
 			<version>5.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.librepdf</groupId>
+			<artifactId>openpdf</artifactId>
+			<version>1.3.26</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.h2database</groupId>
